--- a/assets/sass/components/_icons.scss
+++ b/assets/sass/components/_icons.scss
@@ -3,4 +3,15 @@
   vertical-align: middle;
   width: 1em;
   height: 1em;
+  fill: currentColor;
+}
+
+.icon--sm {
+  width: .75em;
+  height: .75em;
+}
+
+.icon--lg {
+  width: 1.25em;
+  height: 1.25em;
 }
